# Roma-trans-bot

./: .env.example  .gitignore  BOTH_BOTS_STATUS.md  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  DISCORD_BOT_FINALIZED.md  DOCUMENTATION_UPDATE.md  FIXES_APPLIED.md  LICENSE  NATURAL_LANGUAGE_UPDATE.md  PRODUCTION_ROADMAP.md  Procfile  QUICKSTART.md  README.md  STRESS_TEST_RESULTS.md  TELEGRAM_BOT_SETUP.md  build.sh  ecosystem.config.js  pyproject.toml  render.yaml  requirements.txt  run_api.py  run_discord_bot.py  run_telegram_bot.py  wsgi.py
.deployment/: railway.toml
.github/: copilot-instructions.md
config/: agent_config.yaml  bot_config.yaml  languages.yaml  models.yaml
docs/: BOT_DEPLOYMENT.md  CLAUDE.md
frontend/: index.html  package-lock.json  package.json  quick_reference_card.txt  tailwind.config.js  voice_implementation_guide.txt
frontend/src/: App.tsx  ErrorBoundary.tsx  main.tsx  styles.css  theme.ts
scripts/: pm2-startup.sh  setup_db.py
src/api/: main.py
src/bots/: bot_handlers.py  discord_bot.py  telegram_bot.py
src/cli/: __init__.py  __main__.py  commands.py
src/core/: config_loader.py  roma_integration.py  translation_agent.py
src/executors/: base.py  format_preservation.py  language_detection.py  quality_check.py  translation.py
src/services/: cache_service.py  database_service.py  file_service.py  hf_whisper_service.py  translation_providers.py
src/utils/: error_recovery.py  logger.py  sentry_integration.py  validators.py
tests/: stress_test_discord.md
tests/integration/: test_api.py
tests/unit/: test_cache_service.py  (+1 more)
(+15 files in other folders)
